--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,6 @@ body {
   font-family: 'Archivo', sans-serif;
   font-weight: 600;
   font-size: 10px;
-  color: rgba(73, 92, 131, 0.7);
   border: 1px solid rgba(73, 92, 131, 0.3);
   border-radius: 5px;
   padding: 5px 16px;
@@ -43,6 +42,15 @@ body {
 }
 
 .nav-button:hover {
+  color: #495C83;
+}
+
+.button-link {
+  text-decoration: none;
+  color: rgba(73, 92, 131, 0.7);
+}
+
+.button-link:hover {
   color: #495C83;
 }
 
@@ -59,13 +67,19 @@ body {
   box-shadow: 0 0 0 13px rgba(73, 92, 131, 0.2);
 }
 
+.heading-container {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+
 .intro-heading-txt {
   font-family: 'Archivo', sans-serif;
   font-weight: 700;
   font-size: 5rem;
   color: rgba(73, 92, 131, 0.5);
   letter-spacing: 5px;
-  margin: 30px;
+  margin: 30px 0 30px 30px;
   line-height: 4.5rem;
 }
 
@@ -74,7 +88,7 @@ body {
 }
 
 .lname {
-  margin-left: 20%;
+  align-self: flex-end;
   margin-top: 0;
 }
 
@@ -82,10 +96,10 @@ body {
   font-family: 'Arvo', serif;
   font-size: 12px;
   line-height: 20px;
-  width: 20%;
+  width: 40%;
   color: #424A64;
-  margin-left: 45%;
   margin-bottom: 40px;
+  align-self: flex-end;
 }
 
 .highlight-text {
@@ -94,29 +108,45 @@ body {
 
 /* Projects Section */
 
+
 .project-container {
   margin-top: 5%;
 }
+
+.section-divider {
+  display: flex;
+  flex-direction: row;
+}
+
 .short-line {
-  display: inline-block;
+  flex-grow: 1;
   border-bottom: rgba(73, 92, 131, 0.5) 1px solid;
-  width: 5%;
-  margin: 4px 10px;
+  width: 10%;
+  height: 50%;
+  margin: 16px 0;
+  margin-right: 10px;
 }
 
 .long-line {
-  display: inline-block;
+  flex-grow: 10;
   border-bottom: rgba(73, 92, 131, 0.5) 1px solid;
-  width: 80%;
-  margin: 4px 10px;
+  width: 100%;
+  height: 50%;
+  margin: 16px 0;
+  margin-left: 10px;
+}
+
+.line-col {
+  padding-left: 0;
 }
 
 .project-section-title {
-  display: inline-block;
+  flex-grow: 1;
   font-family: 'Archivo', sans-serif;
   font-weight: 600;
   font-size: 12px;
   color: rgba(73, 92, 131, 0.5);
+  margin-top: 10px;
 }
 
 /* Project Cards */
@@ -141,6 +171,9 @@ body {
 .text-column {
   padding: 3%;
   margin-left: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .project-title {
@@ -168,24 +201,22 @@ body {
   margin-top: 15px;
 }
 
+.link-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  min-height: 20px;
+  flex-grow: 4;
+  margin-top: 15px;
+}
+
 .project-link {
-  position: absolute;
-  bottom: 15px;
-  left: 50px;
+  width: 20px;
+  bottom: 10px;
   color: #A8A4CE;
 }
 
 .project-link:hover {
-  color: #C8B6E2;
-}
-
-.project-github {
-  position: absolute;
-  bottom: 15px;
-  color: #A8A4CE;
-}
-
-.project-github:hover {
   color: #C8B6E2;
 }
 
@@ -374,12 +405,11 @@ body {
   }
 
   .intro-body-txt {
-    margin-left: 30px;
+    align-self: flex-start;
     width: 70%;
+    margin-left: 30px;
   }
-}
 
-@media screen and (max-width: 575px) {
   .split-name {
     display: block;
   }
@@ -387,5 +417,36 @@ body {
   .lname {
     align-self: flex-end;
     text-align-last: right;
+  }
+}
+
+    /* Contact Section Mobile */
+
+  .contact-details {
+    margin-top: 20px;
+  }
+
+@media screen and (max-width: 575px) {
+  .heading-container {
+    width: 100%;
+  }
+  .split-name {
+    display: block;
+  }
+
+  .lname {
+    align-self: flex-end;
+    text-align-last: right;
+    margin-right: 30px
+  }
+
+  .intro-body-txt {
+    align-self: flex-start;
+    width: 70%;
+    margin-left: 30px;
+  }
+
+  .contact-columns {
+    width: 40%;
   }
 }
