--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,6 @@ body {
 }
 
 /* Projects Section */
-
-
 .project-container {
   margin-top: 5%;
 }
@@ -150,7 +148,6 @@ body {
 }
 
 /* Project Cards */
-
 .projects {
   justify-content: space-between;
 }
@@ -170,7 +167,13 @@ body {
 
 .text-column {
   padding: 3%;
-  margin-left: 3%;
+  margin-left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.vertical-card-div {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -221,7 +224,8 @@ body {
 }
 
 .card-img {
-  width: 100%;
+  /* width: 100%; */
+  height: 100%;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -231,9 +235,7 @@ body {
   justify-content: flex-end;
 }
 
-
 /* Footer Section */
-
 .contact-container {
   padding: 5%;
 }
@@ -280,7 +282,6 @@ body {
   font-weight: 700;
   font-size: 12px;
   color: rgba(73, 92, 131, 0.5);
-
 }
 
 .contact-info {
@@ -289,8 +290,6 @@ body {
   font-size: 12px;
   color: #495C83;
 }
-
-
 
 /* Navbar Offcanvas Styles */
 @media all and (max-width: 991px) {
@@ -332,8 +331,7 @@ body {
     display: inline;
   }
 
-        /* Nav & Offcanvas Mobile */
-
+  /* Nav & Offcanvas Mobile */
   .hamburger-icon {
     position: absolute;
     right: 8%;
@@ -398,8 +396,7 @@ body {
     display: block;
   }
 
-          /* Heading Section Mobile */
-
+  /* Heading Section Mobile */
   .intro-card {
     margin-top: 70px;
   }
@@ -418,18 +415,24 @@ body {
     align-self: flex-end;
     text-align-last: right;
   }
-}
 
-    /* Contact Section Mobile */
-
+  /* Contact Section Mobile */
   .contact-details {
     margin-top: 20px;
   }
+}
+
+@media screen and (max-width: 1040px) {
+  .project-card {
+    width: 100%;
+  }
+}
 
 @media screen and (max-width: 575px) {
   .heading-container {
     width: 100%;
   }
+
   .split-name {
     display: block;
   }
